update package.json to support webapps in firefox-client

--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "url": "http://github.com/harthur/fxconsole.git"
   },
   "dependencies": {
-    "nomnom": "~1.6.1",
-    "colors": "~0.5.1",
-    "firefox-client": "~0.0.3"
+    "nomnom": "^1.6.1",
+    "colors": "^0.5.1",
+    "firefox-client": "^0.2.3"
   },
   "bin": {
     "fxconsole": "./bin/repl.js"
